--- a/index.html
+++ b/index.html
@@ -34,31 +34,32 @@
             <input type="text" name= "name" placeholder="Movie Name" required>
             <input type="submit" value="Search" class="submit-btn">
           </div>
-          <!-- Option 1  Single Range-->
-          <h1>Option 1: Easy to use. Can't change minimum </h1>
-          <!-- https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_rangeslider-->
-          <div class="form-control">
-            <div class="slidecontainer">
-              <h2> Year 
-                Range:</h2>
-              <p>Year: 1950 ~ <span id="demo"></span></p> 
-              <input id="myRange" type="range" min="1950" max="2021" value="2000" class="slider">
-            </div>
-          </div>
-          
-
               <h1>Option 2: This is Jquery. </h1>
               <!-- option 2-->
               <!--https://codepen.io/Pierre_Hamel/pen/ocJEH-->
               <form>
                 <div data-role="rangeslider">
                     <label for="range-1a">Search Year Range :</label>
-                    <input type="range" name="range-1a" id="range-1a" min="1950" max="2021" value="1975" data-popup-enabled="true" data-show-value="true">
+                    <input type="range" name="range-1a" id="range-1a" min="1950" max="2021" value="1950" data-popup-enabled="true" data-show-value="true">
                     <label for="range-1b">Rangeslider:</label>
-                    <input type="range" name="range-1b" id="range-1b" min="1950" max="2021" value="2000" data-popup-enabled="true" data-show-value="true">
+                    <input type="range" name="range-1b" id="range-1b" min="1950" max="2021" value="2001" data-popup-enabled="true" data-show-value="true">
                 </div>
               </form>
         </form>
+      </div>
+        <br>
+          <label for="Select Genre"> Choose Genre</label>
+          <select name="genre" id="genreID">
+            <option value = "Action">Action</option>
+            <option value = "Adventure">Adventure</option>
+            <option value = "Drama">Drama</option>
+            <option value = "Fantasy">Fantasy</option>
+          </select>
+          <br></br>
+          <input type="submit" value="Submit">
+        </form>
+      <div>
+        
       </div>
     </div>
   </section>
