--- a/index.html
+++ b/index.html
@@ -29,41 +29,20 @@
 
       <div class="showcase-form card">
         <h2>Search Movies</h2>
-        <form>
+        <form id = 'queryForm'>
           <div class="form-control">
             <input type="text" name= "name" placeholder="Movie Name" required>
-            <input type="submit" value="Search" class="submit-btn">
+            <div data-role="rangeslider">
+              <label for="range-1a">Search Year Range :</label>
+              <input type="range" name="rangeBegin" id="range-1a" min="1950" max="2021" value="1950" data-popup-enabled="true" data-show-value="true">
+              <label for="range-1b">Rangeslider:</label>
+              <input type="range" name="rangeEnd" id="range-1b" min="1950" max="2021" value="2021" data-popup-enabled="true" data-show-value="true">
+            </div>
+            <label for="Select Genre"> Choose Genre</label>
+            <select name="genre" id="genreID"></select>
+            <input type="submit" value="Submit">
           </div>
-<<<<<<< HEAD
-
-=======
->>>>>>> 9f6a2f071da95f76ed9c72d2dba65a4f44b246a5
-              <h1>Option 2: This is Jquery. </h1>
-              <!-- option 2-->
-              <!--https://codepen.io/Pierre_Hamel/pen/ocJEH-->
-              <form>
-                <div data-role="rangeslider">
-                    <label for="range-1a">Search Year Range :</label>
-                    <input type="range" name="range-1a" id="range-1a" min="1950" max="2021" value="1950" data-popup-enabled="true" data-show-value="true">
-                    <label for="range-1b">Rangeslider:</label>
-                    <input type="range" name="range-1b" id="range-1b" min="1950" max="2021" value="2001" data-popup-enabled="true" data-show-value="true">
-                </div>
-              </form>
         </form>
-      </div>
-        <br>
-          <label for="Select Genre"> Choose Genre</label>
-          <select name="genre" id="genreID">
-            <option value = "Action">Action</option>
-            <option value = "Adventure">Adventure</option>
-            <option value = "Drama">Drama</option>
-            <option value = "Fantasy">Fantasy</option>
-          </select>
-          <br></br>
-          <input type="submit" value="Submit">
-        </form>
-      <div>
-        
       </div>
     </div>
   </section>
