--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="index.css">
-    
     <!-- option 2 JQuery Links-->
-
     <link rel="stylesheet" href="https://demos.jquerymobile.com/1.4.2/css/themes/default/jquery.mobile-1.4.2.min.css">  
     <script src="https://demos.jquerymobile.com/1.4.2/js/jquery.js"></script>
 	  <script src="https://demos.jquerymobile.com/1.4.2/js/jquery.mobile-1.4.2.min.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies Indexer</title>
     <script defer src="index.js"></script>
@@ -26,7 +23,6 @@
         </p>
         <a href="https://www.imdb.com/" class="btn btn-outline">Go to IMDB</a>
       </div>
-
       <div class="showcase-form card">
         <h2>Search Movies</h2>
         <form id = 'queryForm'>
@@ -38,19 +34,17 @@
               <label for="range-1b">Rangeslider:</label>
               <input type="range" name="rangeEnd" id="range-1b" min="1950" max="2021" value="2021" data-popup-enabled="true" data-show-value="true">
             </div>
-            <label for="Select Genre"> Choose Genre</label>
+            <label for="Select Genre" id ="chooseGenre"> Choose Genre</label>
             <select name="genre" id="genreID">
               <option value="">All</option>
             </select>
-            <input type="submit" value="Submit">
+            <input type="submit" id="submitButton" value="Submit">
           </div>
         </form>
       </div>
     </div>
   </section>
   <div class=moviesList>
-    
   </div>
-
 </body>
 </html>
