finished rough draft with css

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
               <label for="range-1b">Rangeslider:</label>
               <input type="range" name="rangeEnd" id="range-1b" min="1950" max="2021" value="2021" data-popup-enabled="true" data-show-value="true">
             </div>
-            <label for="Select Genre"> Choose Genre</label>
+            <label for="Select Genre" id ="chooseGenre"> Choose Genre</label>
             <select name="genre" id="genreID">
               <option value="">All</option>
             </select>
-            <input type="submit" value="Submit">
+            <input type="submit" id="submitButton" value="Submit">
           </div>
         </form>
       </div>
