added reset button, added hover css

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
               <option value="">All</option>
             </select>
             <input type="submit" id="submitButton" value="Submit">
+            <input type="button" id="resetButton"value = "Reset">
           </div>
         </form>
       </div>
