--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </div>
     </div>
   </section>
+	<input type="button" id="resetButton"value = "Reset">
   <div class=moviesList>
   </div>
 </body>
