cleaned up project

--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
             <select name="genre" id="genreID">
               <option value="">All</option>
             </select>
+            <div id = buttonContainer>
             <input type="submit" id="submitButton" value="Submit">
+            <input type="button" id="resetButton"value = "Reset">
+            </div>
           </div>
         </form>
       </div>
     </div>
   </section>
-	<input type="button" id="resetButton"value = "Reset">
   <div class=moviesList>
   </div>
 </body>
