--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="index.css">
-    
     <!-- option 2 JQuery Links-->
-
     <link rel="stylesheet" href="https://demos.jquerymobile.com/1.4.2/css/themes/default/jquery.mobile-1.4.2.min.css">  
     <script src="https://demos.jquerymobile.com/1.4.2/js/jquery.js"></script>
 	  <script src="https://demos.jquerymobile.com/1.4.2/js/jquery.mobile-1.4.2.min.js"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies Indexer</title>
     <script defer src="index.js"></script>
@@ -21,12 +18,8 @@
     <div class="container grid">
       <div class="showcase-text">
         <h1>Find Movie You Want to Watch</h1>
-        <p>
-           Recomment top 250 movies!
-        </p>
         <a href="https://www.imdb.com/" class="btn btn-outline">Go to IMDB</a>
       </div>
-
       <div class="showcase-form card">
         <h2>Search Movies</h2>
         <form id = 'queryForm'>
@@ -42,16 +35,16 @@
             <select name="genre" id="genreID">
               <option value="">All</option>
             </select>
+            <div id = buttonContainer>
             <input type="submit" id="submitButton" value="Submit">
             <input type="button" id="resetButton"value = "Reset">
+            </div>
           </div>
         </form>
       </div>
     </div>
   </section>
   <div class=moviesList>
-    
   </div>
-
 </body>
 </html>
